--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@supabase/supabase-js": "^2.91.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "react": "19.2.3",
